# Autonomous-AI-System-with-Self-Improvement

./: .test.py.swp  Dockerfile  EnhancedLiveDataProvider.py  README.md  agent.py  analytics.py  app.py  app_testing.py  autonomous_agent.py  charts.py  config.py  constraints.txt  dashboard.html  db_manager.py  health.py  live_data_provider.py  plugins.py  pyproject.toml  quality.py  requirements.txt  research.py  security.py  test.py  user_preferences.py
.devcontainer/: devcontainer.json
.github/workflows/: python-publish.yml  python-tests.yml
agents/: autonomous_agent.py
core/: analytics.py  config.py  db_manager.py  plugins.py  research.py  security.py
core/plugins/: README.md  chatbot.py  counter.py  stepwise_quiz.py  streamlit_plugins.py
diagnostics/: health.py  quality.py
enhanced_analytics_app/: analytics_engine.py  db_manager.py  enhanced_analytics_engine.py  enhanced_live_data_provider.py  live_data_provider.py  main.py  ui_components.py
modules/: custom_analysis.py  market_dashboard.py  news_sentiment.py  notifications.py  user_prefs_tab.py
plugins/: .keep  config.py
self_improve/: agent.py
streamlit/: app.py
tests/: test_basic.py
ui/: streamlit_plugins.py
ui/old/: streamlit_plugins.py
utils/: charts.py  io_utils.py  plotting_utils.py
