[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-ai-system"
version = "0.1.0"
description = "Autonomous AI System with Self-Improvement"
authors = [
  { name="Leonydis139" }
]
dependencies = [
  # add your dependencies here, e.g. "numpy", "pandas"
]
